testsuite/tests/typecheck/should_compile/T1634.hs
{-# LANGUAGE RankNTypes #-}

module T1634 where

t1 :: a -> (forall b. b -> (a,b))
t1 = (,)
